fix: scrollbar styles '

--- a/src/index.scss
+++ b/src/index.scss
@@ -1,25 +1,25 @@
 @import '../src/variables';
 
-/* Works on Firefox */
-* {
-   scrollbar-width: thin;
-   scrollbar-color: $primary-color $gray-color-light;
-}
+// /* Works on Firefox */
+// * {
+//    scrollbar-width: thin;
+//    scrollbar-color: $primary-color $gray-color-light;
+// }
 
-/* Works on Chrome, Edge, and Safari */
-*::-webkit-scrollbar {
-   width: $unit-3;
-}
+// /* Works on Chrome, Edge, and Safari */
+// *::-webkit-scrollbar {
+//    width: $unit-3;
+// }
 
-*::-webkit-scrollbar-track {
-   background: $gray-color-light;
-}
+// *::-webkit-scrollbar-track {
+//    background: $gray-color-light;
+// }
 
-*::-webkit-scrollbar-thumb {
-   background-color: $primary-color;
-   border-radius: $unit-5;
-   border: 3px solid $gray-color-light;
-}
+// *::-webkit-scrollbar-thumb {
+//    background-color: $primary-color;
+//    border-radius: $unit-5;
+//    border: 3px solid $gray-color-light;
+// }
 
 ul {
    list-style: none;
